--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.0",
     "firebase": "^12.5.0",
     "@firebase/firestore": "^4.9.2",
-    "@firebase/app": "^0.14.5"
+    "@firebase/app": "^0.14.5",
+    "@google/genai": "^1.28.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
