--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "firebase": "^12.5.0",
-    "@firebase/firestore": "^4.9.2",
-    "@firebase/app": "^0.14.5",
-    "@google/genai": "^1.28.0"
+    "@google/genai": "^1.28.0",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
