--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,16 @@
 {
+  "_backup_2025_11_19": {
+    "hosting": {
+      "public": "dist",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [{ "source": "**", "destination": "/index.html" }]
+    }
+  },
   "hosting": {
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [{ "source": "**", "destination": "/index.html" }]
+    "rewrites": [
+      { "source": "/crm/**", "destination": "/crm/index.html" }
+    ]
   }
 }
