--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
-      { "source": "/crm/**", "destination": "/crm/index.html" }
+      { "source": "/crm/**", "destination": "/index.html" }
     ]
   }
 }
