--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -18,4 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EVENGO_CRM }}'
           projectId: ai-event-bot
           channelId: live
+          siteId: ai-event-bot-crm
           # siteId: <если деплоишь не в primary-сайт, укажи конкретный siteId>
