--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,6 @@
 {
-  "_backup_2025_11_19": {
-    "hosting": {
-      "public": "dist",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-      "rewrites": [{ "source": "/crm/**", "destination": "/crm/index.html" }]
-    }
-  },
   "hosting": {
+    "site": "ai-event-bot-crm",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
